erased some stretch goals attempts because it was making the rest of my console disappear.

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -8,5 +8,8 @@
     <h1>Week 2 Assignment - Part 1</h1>
     <p>See console for output.</p>
     <!-- If you have any questions, add them in paragraph tags here! -->
+    <p>
+      I didn't understand how to do the stretch goals, although I gave it a shot. I'm also unsure if I did #15 correctly. There's probably a neater way to execute it.
+    </p>
   </body>
 </html>
